--- a/src/components/PrimaryPlayerSection/styles.scss
+++ b/src/components/PrimaryPlayerSection/styles.scss
@@ -1,5 +1,5 @@
 .primary-section-container {
-    background-color: teal;
+    background-color: greenyellow;
     padding: 36px 24px;
     .player-chips-container {
         display: flex;
