feature/declare-winner

--- a/src/components/BettingTable/styles.scss
+++ b/src/components/BettingTable/styles.scss
@@ -1,6 +1,7 @@
 .betting-table-container {
-  border: 1px solid black;
-  width: 100%;
-  max-width: 1080px;
-  text-align: center;
+    border: 1px solid black;
+    width: 100%;
+    max-width: 1080px;
+    text-align: center;
+    margin: 0 auto;
 }
